# dataroom

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml
backend/: .env.exmaple  .gitignore  Dockerfile  pyproject.toml  pytest.ini  ruff.toml
backend/src/: asgi.py
backend/src/api/auth/: security.py
backend/src/api/routes/: auth.py  files.py  workspace.py
backend/src/config/: settings.py
backend/src/database/: session.py
backend/src/models/: file.py  token_blacklist.py  user.py  workspace.py
backend/src/schemas/: auth.py  base.py  file.py  user.py  workspace.py
backend/src/types/: date.py  roles.py
backend/src/utils/: settings.py
backend/tests/: conftest.py  test_auth.py
frontend/: .env.example  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/mock/data/: files.json  user.json
frontend/mock/files/: sample.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/common/: EmptyState.tsx  (+1 more)
frontend/src/hooks/: useFiles.ts  useGoogleDrive.ts  useWorkspaces.ts
frontend/src/layout/: Header.tsx  Layout.tsx  ThemeToggle.tsx
frontend/src/lib/: config.ts  googleDrive.ts  httpClient.ts  mockInterceptor.ts  permissions.ts  queryClient.ts  queryKeys.ts  utils.ts
frontend/src/services/: authService.ts  fileService.ts  workspaceService.ts
frontend/src/store/: authStore.ts  themeStore.ts  workspaceStore.ts
frontend/src/types/: auth.ts  enums.ts  file.ts  googleDrive.ts  workspace.ts
(+19 files in other folders)
