[project]
name = "backend"
version = "0.1.0"
description = "Backend module for Data Room application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.6",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "google-auth>=2.23.0",
    "httpx>=0.25.0",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "pytest-asyncio>=0.24.0",
]
